--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
   "author": "binguanghe",
   "license": "MIT",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.2",
     "https": "^1.0.0",
     "mongoose": "^4.13.6"
+  },
+  "devDependencies": {
+    "babel": "^6.23.0"
   }
 }
