--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "cheerio": "^1.0.0-rc.2",
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
     "https": "^1.0.0",
     "mongoose": "^4.13.6"
