--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "binguanghe",
   "license": "MIT",
   "dependencies": {
+    "async": "^2.6.0",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "cheerio": "^1.0.0-rc.2",
